force-app/main/default/objects/ARF_Bank_Reference__c/ARF_Bank_Reference__c.object-meta.xml
<CustomObject>
    <label>Bank Reference</label>
    <pluralLabel>Bank References</pluralLabel>
    <nameField>
        <label>Reference Number</label>
        <displayFormat>BR-{0000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>