force-app/main/default/objects/ARF_Bank_Reference__c/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Checking</fullName><default>false</default></value>
            <value><fullName>Savings</fullName><default>false</default></value>
            <value><fullName>Line_of_Credit</fullName><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>