force-app/main/default/objects/ARF_Bank_Reference__c/fields/Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Name__c</fullName>
    <label>Bank Name</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>