force-app/main/default/objects/ARF_Bank_Reference__c/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <label>Branch</label>
    <type>Text</type>
    <length>255</length>
</CustomField>