force-app/main/default/objects/ARF_Bank_Reference__c/fields/Routing_Number__c.field-meta.xml
<CustomField>
    <fullName>Routing_Number__c</fullName>
    <label>Routing Number</label>
    <type>Text</type>
    <length>20</length>
</CustomField>